--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10,6 +10,8 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+
 :root {
   --blue: red;
   --indigo: #6610f2;
@@ -69,6 +71,21 @@ body {
   background-color: #fff;
 }
 
+#video-container {
+  position: relative;
+  width: 100%;
+  margin: auto;
+}
+#barcode-detector {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 40%;
+  border: 4px solid rgb(0, 4, 255);
+  box-sizing: border-box;
+}
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
